--- a/network/endpoints/endpoint_map.yaml
+++ b/network/endpoints/endpoint_map.yaml
@@ -18,6 +18,7 @@ parameters:
   IronicApiVirtualIP: {type: string, default: ''}
   KeystoneAdminApiVirtualIP: {type: string, default: ''}
   KeystonePublicApiVirtualIP: {type: string, default: ''}
+  MysqlNoBracketsVirtualIP: {type: string, default: ''}
   MysqlVirtualIP: {type: string, default: ''}
   NeutronApiVirtualIP: {type: string, default: ''}
   NovaApiVirtualIP: {type: string, default: ''}
@@ -57,6 +58,8 @@ parameters:
       KeystoneInternal: {protocol: http, port: '5000', host: IP_ADDRESS}
       KeystonePublic: {protocol: http, port: '5000', host: IP_ADDRESS}
       MysqlInternal: {protocol: mysql+pymysql, port: '3306', host: IP_ADDRESS}
+      MysqlNoBracketsInternal: {protocol: mysql+pymysql, port: '3306',
+        host: IP_ADDRESS}
       NeutronAdmin: {protocol: http, port: '9696', host: IP_ADDRESS}
       NeutronInternal: {protocol: http, port: '9696', host: IP_ADDRESS}
       NeutronPublic: {protocol: http, port: '9696', host: IP_ADDRESS}
@@ -1508,6 +1511,44 @@ outputs:
                   IP_ADDRESS: {get_param: MysqlVirtualIP}
             - ':'
             - get_param: [EndpointMap, MysqlInternal, port]
+      MysqlNoBracketsInternal:
+        host:
+          str_replace:
+            template:
+              get_param: [EndpointMap, MysqlNoBracketsInternal, host]
+            params:
+              CLOUDNAME: {get_param: CloudName}
+              IP_ADDRESS: {get_param: MysqlNoBracketsVirtualIP}
+        port:
+          get_param: [EndpointMap, MysqlNoBracketsInternal, port]
+        protocol:
+          get_param: [EndpointMap, MysqlNoBracketsInternal, protocol]
+        uri:
+          list_join:
+          - ''
+          - - get_param: [EndpointMap, MysqlNoBracketsInternal, protocol]
+            - ://
+            - str_replace:
+                template:
+                  get_param: [EndpointMap, MysqlNoBracketsInternal, host]
+                params:
+                  CLOUDNAME: {get_param: CloudName}
+                  IP_ADDRESS: {get_param: MysqlNoBracketsVirtualIP}
+            - ':'
+            - get_param: [EndpointMap, MysqlNoBracketsInternal, port]
+        uri_no_suffix:
+          list_join:
+          - ''
+          - - get_param: [EndpointMap, MysqlNoBracketsInternal, protocol]
+            - ://
+            - str_replace:
+                template:
+                  get_param: [EndpointMap, MysqlNoBracketsInternal, host]
+                params:
+                  CLOUDNAME: {get_param: CloudName}
+                  IP_ADDRESS: {get_param: MysqlNoBracketsVirtualIP}
+            - ':'
+            - get_param: [EndpointMap, MysqlNoBracketsInternal, port]
       NeutronAdmin:
         host:
           str_replace:
