--- a/puppet/hieradata/controller.yaml
+++ b/puppet/hieradata/controller.yaml
@@ -77,6 +77,7 @@ swift::proxy::pipeline:
   - 'healthcheck'
   - 'cache'
   - 'ratelimit'
+  - 'bulk'
   - 'tempurl'
   - 'formpost'
   - 'authtoken'
