Include bulk in swift proxy pipeline
With bulk delete enabled for gnocchi, this option should
be included in pipeline as well.

Change-Id: I5786c6f14e3aab9e167c22d8f72c5c1688440e95

--- a/puppet/hieradata/controller.yaml
+++ b/puppet/hieradata/controller.yaml
@@ -84,6 +84,7 @@ swift::proxy::pipeline:
   - 'healthcheck'
   - 'cache'
   - 'ratelimit'
+  - 'bulk'
   - 'tempurl'
   - 'formpost'
   - 'authtoken'
