--- a/puppet/hieradata/controller.yaml
+++ b/puppet/hieradata/controller.yaml
@@ -82,6 +82,7 @@ keystone::wsgi::apache::ssl: false
 swift::proxy::pipeline:
   - 'catch_errors'
   - 'healthcheck'
+  - 'proxy-logging'
   - 'cache'
   - 'ratelimit'
   - 'bulk'
