--- a/overcloud.yaml
+++ b/overcloud.yaml
@@ -381,6 +381,7 @@ parameters:
       - OS::TripleO::Services::HeatApiCfn
       - OS::TripleO::Services::HeatApiCloudwatch
       - OS::TripleO::Services::HeatEngine
+      - OS::TripleO::Services::MySQL
       - OS::TripleO::Services::NeutronDhcpAgent
       - OS::TripleO::Services::NeutronL3Agent
       - OS::TripleO::Services::NeutronMetadataAgent
