--- a/overcloud-resource-registry-puppet.yaml
+++ b/overcloud-resource-registry-puppet.yaml
@@ -144,6 +144,7 @@ resource_registry:
   OS::TripleO::Services::IronicApi: puppet/services/ironic-api.yaml
   OS::TripleO::Services::IronicConductor: puppet/services/ironic-conductor.yaml
   OS::TripleO::Services::Kernel: puppet/services/kernel.yaml
+  OS::TripleO::Services::MySQL: puppet/services/database/mysql.yaml
   OS::TripleO::Services::NeutronDhcpAgent: puppet/services/neutron-dhcp.yaml
   OS::TripleO::Services::NeutronL3Agent: puppet/services/neutron-l3.yaml
   OS::TripleO::Services::NeutronMetadataAgent: puppet/services/neutron-metadata.yaml
