Missing CephClientKey parameter in puppet-ceph-devel and storage-environment
This change adds the CephClientKey parameter to puppet-ceph-devel.yaml
and storage-environment.yaml environment files. This is needed when
--ceph-storage is not passed to the openstack overcloud deploy command
as the tripleo client doesn't generate the keys.

Change-Id: Idfdce190c2ad4ae198fe17474aee19cb76dac5fb
Closes-Bug: #1601864

--- a/environments/storage-environment.yaml
+++ b/environments/storage-environment.yaml
@@ -61,3 +61,5 @@ parameter_defaults:
   # CephMonKey: ''
   ## Ceph admin key, e.g. 'AQDLOh1VgEp6FRAAFzT7Zw+Y9V6JJExQAsRnRQ=='
   # CephAdminKey: ''
+  ## Ceph client key, e.g 'AQC+vYNXgDAgAhAAc8UoYt+OTz5uhV7ItLdwUw=='
+  # CephClientKey: ''
