--- a/puppet/services/glance-api.yaml
+++ b/puppet/services/glance-api.yaml
@@ -85,6 +85,7 @@ outputs:
             params:
               REGISTRY_HOST: {get_param: [EndpointMap, GlanceRegistryInternal, host]}
         glance::api::keystone_password: {get_param: GlancePassword}
+        glance::api::enable_proxy_headers_parsing: true
         glance::api::debug: {get_param: Debug}
         glance::api::workers: {get_param: GlanceWorkers}
         glance_notifier_strategy: {get_param: GlanceNotifierStrategy}
