Update Ironic composable services
* Add service for configuring Nova compute with Ironic
* Fix authentication in Ironic APU
* Provide a separate environment file for enabling Ironic

Change-Id: I211e6d91eacd238b04a1aa37528d5a91523407d9
Partially-Implements: blueprint ironic-integration

--- a/puppet/services/ironic-api.yaml
+++ b/puppet/services/ironic-api.yaml
@@ -35,9 +35,18 @@ outputs:
           # the VIP, but rather a real IP of the controller.
           - ironic::my_ip: {get_param: [EndpointMap, MysqlInternal, host]}
             ironic::api::admin_password: {get_param: IronicPassword}
-            ironic::keystone::auth::public_url: {get_param: [EndpointMap, IronicPublic, uri]}
-            ironic::keystone::auth::internal_url: {get_param: [EndpointMap, IronicInternal, uri]}
+            ironic::api::admin_tenant_name: 'service'
+            ironic::api::admin_user: 'ironic'
+            ironic::api::auth_uri: {get_param: [EndpointMap, KeystoneInternal, uri] }
+            ironic::api::identity_uri: {get_param: [EndpointMap, KeystoneAdmin, uri_no_suffix]}
+            ironic::api::port: {get_param: [EndpointMap, IronicInternal, port]}
+            # This is used to build links in responses
+            ironic::api::public_endpoint: {get_param: [EndpointMap, IronicPublic, uri_no_suffix]}
             ironic::keystone::auth::admin_url: {get_param: [EndpointMap, IronicAdmin, uri]}
+            ironic::keystone::auth::internal_url: {get_param: [EndpointMap, IronicInternal, uri]}
+            ironic::keystone::auth::public_url: {get_param: [EndpointMap, IronicPublic, uri]}
+            ironic::keystone::auth::auth_name: 'ironic'
             ironic::keystone::auth::password: {get_param: IronicPassword }
+            ironic::keystone::auth::tenant: 'service'
       step_config: |
         include ::tripleo::profile::base::ironic::api
