--- a/puppet/hieradata/database.yaml
+++ b/puppet/hieradata/database.yaml
@@ -1,4 +1,5 @@
 # Aodh
+# TODO(emilien) move it to composable aodh roles later
 aodh::db::mysql::user: aodh
 aodh::db::mysql::host: "%{hiera('mysql_virtual_ip')}"
 aodh::db::mysql::dbname: aodh
