--- a/puppet/services/ceilometer-api.yaml
+++ b/puppet/services/ceilometer-api.yaml
@@ -30,5 +30,6 @@ outputs:
                 dport:
                   - 8777
                   - 13777
+          - ceilometer::api::keystone_tenant: 'service'
       step_config: |
         include ::tripleo::profile::base::ceilometer::api
