--- a/puppet/services/cinder-api.yaml
+++ b/puppet/services/cinder-api.yaml
@@ -37,6 +37,13 @@ outputs:
           - cinder::api::auth_uri: {get_param: [EndpointMap, KeystoneInternal, uri]}
             cinder::api::identity_uri: {get_param: [EndpointMap, KeystoneAdmin, uri_no_suffix]}
             cinder::api::keystone_password: {get_param: CinderPassword}
+            cinder::api::keystone_tenant: 'service'
+            cinder::api::enable_proxy_headers_parsing: true
+            cinder::api::nova_catalog_info: 'compute:Compute Service:internalURL'
+            # TODO(emilien) move it to puppet-cinder
+            cinder::config:
+              DEFAULT/swift_catalog_info:
+                value: 'object-store:swift:internalURL'
             cinder::glance::glance_api_servers: {get_param: [EndpointMap, GlanceInternal, uri]}
             tripleo::profile::base::cinder::cinder_enable_db_purge: {get_param: CinderEnableDBPurge}
             tripleo.cinder_api.firewall_rules:
