--- a/puppet/services/cinder-base.yaml
+++ b/puppet/services/cinder-base.yaml
@@ -63,3 +63,7 @@ outputs:
         cinder::db::mysql::allowed_hosts:
           - '%'
           - "%{hiera('mysql_bind_host')}"
+        cinder::rabbit_heartbeat_timeout_threshold: 60
+        cinder::keystone::auth::tenant: 'service'
+        cinder::host: hostgroup
+        cinder::cron::db_purge::destination: '/dev/null'
