--- a/puppet/services/cinder-scheduler.yaml
+++ b/puppet/services/cinder-scheduler.yaml
@@ -23,6 +23,8 @@ outputs:
     value:
       service_name: cinder-scheduler
       config_settings:
-        get_attr: [CinderBase, role_data, config_settings]
+        map_merge:
+          - get_attr: [CinderBase, role_data, config_settings]
+          - cinder::scheduler::scheduler_driver: cinder.scheduler.filter_scheduler.FilterScheduler
       step_config: |
         include ::tripleo::profile::base::cinder::scheduler
