--- a/puppet/services/database/mongodb-base.yaml
+++ b/puppet/services/database/mongodb-base.yaml
@@ -27,5 +27,6 @@ outputs:
       service_name: mongodb-base
       config_settings:
         mongodb::server::nojournal: {get_param: MongoDbNoJournal}
+        mongodb::server::journal: false
         mongodb::server::ipv6: {get_param: MongoDbIPv6}
         mongodb::server::replset: {get_param: MongoDbReplset}
