--- a/puppet/services/database/mysql.yaml
+++ b/puppet/services/database/mysql.yaml
@@ -17,6 +17,13 @@ outputs:
     value:
       service_name: mysql
       config_settings:
+        # The Galera package should work in cluster and
+        # non-cluster modes based on the config file.
+        # We set the package name here explicitly so
+        # that it matches what we pre-install
+        # in tripleo-puppet-elements.
+        mysql::server::package_name: 'mariadb-galera-server'
+        mysql::server::manage_config_file: true
         tripleo.mysql.firewall_rules:
           '104 mysql galera':
             dport:
