--- a/puppet/services/glance-api.yaml
+++ b/puppet/services/glance-api.yaml
@@ -92,6 +92,7 @@ outputs:
         glance::backend::swift::swift_store_auth_address: {get_param: [EndpointMap, KeystoneInternal, uri] }
         glance::backend::swift::swift_store_user: service:glance
         glance::backend::swift::swift_store_key: {get_param: GlancePassword}
+        glance::backend::swift::swift_store_create_container_on_put: true
         glance::backend::rbd::rbd_store_pool: {get_param: GlanceRbdPoolName}
         glance::backend::rbd::rbd_store_user: {get_param: CephClientUserName}
         glance_backend: {get_param: GlanceBackend}
@@ -109,5 +110,10 @@ outputs:
             dport:
               - 9292
               - 13292
+        glance::keystone::auth::tenant: 'service'
+        glance::api::keystone_tenant: 'service'
+        glance::api::pipeline: 'keystone'
+        glance::api::show_image_direct_url: true
+
       step_config: |
         include ::tripleo::profile::base::glance::api
