--- a/puppet/services/gnocchi-api.yaml
+++ b/puppet/services/gnocchi-api.yaml
@@ -29,5 +29,6 @@ outputs:
                 dport:
                   - 8041
                   - 13041
+          - gnocchi::api::keystone_tenant: 'service'
       step_config: |
         include ::tripleo::profile::base::gnocchi::api
