--- a/puppet/services/gnocchi-base.yaml
+++ b/puppet/services/gnocchi-base.yaml
@@ -90,3 +90,5 @@ outputs:
         gnocchi::db::mysql::allowed_hosts:
           - '%'
           - "%{hiera('mysql_bind_host')}"
+        gnocchi::auth::auth_region: 'regionOne'
+        gnocchi::auth::auth_tenant_name: 'service'
