--- a/puppet/services/haproxy.yaml
+++ b/puppet/services/haproxy.yaml
@@ -19,5 +19,26 @@ outputs:
         tripleo.haproxy.firewall_rules:
           '107 haproxy stats':
             dport: 1993
+        # TODO(emilien) make it composable to find which services are actually running
+        tripleo::haproxy::keystone_admin: true
+        tripleo::haproxy::keystone_public: true
+        tripleo::haproxy::neutron: true
+        tripleo::haproxy::cinder: true
+        tripleo::haproxy::glance_api: true
+        tripleo::haproxy::glance_registry: true
+        tripleo::haproxy::nova_osapi: true
+        tripleo::haproxy::nova_metadata: true
+        tripleo::haproxy::nova_novncproxy: true
+        tripleo::haproxy::mysql: true
+        tripleo::haproxy::redis: true
+        tripleo::haproxy::sahara: true
+        tripleo::haproxy::swift_proxy_server: true
+        tripleo::haproxy::ceilometer: true
+        tripleo::haproxy::aodh: true
+        tripleo::haproxy::gnocchi: true
+        tripleo::haproxy::heat_api: true
+        tripleo::haproxy::heat_cloudwatch: true
+        tripleo::haproxy::heat_cfn: true
+        tripleo::haproxy::horizon: true
       step_config: |
         include ::tripleo::profile::base::haproxy
