--- a/puppet/services/heat-base.yaml
+++ b/puppet/services/heat-base.yaml
@@ -45,3 +45,14 @@ outputs:
           context_is_admin:
             key: 'context_is_admin'
             value: 'role:admin'
+        heat::rabbit_heartbeat_timeout_threshold: 60
+        heat::keystone_tenant: 'service'
+        heat::keystone::auth::tenant: 'service'
+        heat::keystone::domain::domain_name: 'heat_stack'
+        heat::keystone::domain::domain_admin: 'heat_stack_domain_admin'
+        heat::keystone::domain::domain_admin_email: 'heat_stack_domain_admin@localhost'
+        heat::auth_plugin: 'password'
+        heat::cron::purge_deleted::age: 30
+        heat::cron::purge_deleted::age_type: 'days'
+        heat::cron::purge_deleted::maxdelay: 3600
+        heat::cron::purge_deleted::destination: '/dev/null'
