--- a/puppet/services/horizon.yaml
+++ b/puppet/services/horizon.yaml
@@ -36,5 +36,11 @@ outputs:
             dport:
               - 80
               - 443
+        horizon::cache_backend: django.core.cache.backends.memcached.MemcachedCache
+        horizon::django_session_engine: 'django.contrib.sessions.backends.cache'
+        horizon::vhost_extra_params:
+          add_listen: false
+          priority: 10
+          access_log_format: '%a %l %u %t \"%r\" %>s %b \"%%{}{Referer}i\" \"%%{}{User-Agent}i\"'
       step_config: |
         include ::tripleo::profile::base::horizon
