--- a/puppet/services/kernel.yaml
+++ b/puppet/services/kernel.yaml
@@ -15,5 +15,26 @@ outputs:
     description: Role data for the Kernel modules
     value:
       service_name: kernel
+      config_settings:
+        kernel_modules:
+          nf_conntrack: {}
+        sysctl_settings:
+          net.ipv4.tcp_keepalive_intvl:
+            value: 1
+          net.ipv4.tcp_keepalive_probes:
+            value: 5
+          net.ipv4.tcp_keepalive_time:
+            value: 5
+          net.nf_conntrack_max:
+            value: 500000
+          net.netfilter.nf_conntrack_max:
+            value: 500000
+          # prevent neutron bridges from autoconfiguring ipv6 addresses
+          net.ipv6.conf.default.accept_ra:
+            value: 0
+          net.ipv6.conf.default.autoconf:
+            value: 0
+          net.core.netdev_max_backlog:
+            value: 10000
       step_config: |
         include ::tripleo::profile::base::kernel
