--- a/puppet/services/neutron-base.yaml
+++ b/puppet/services/neutron-base.yaml
@@ -61,4 +61,7 @@ outputs:
             params:
               PLUGINS: {get_param: NeutronServicePlugins}
         neutron::debug: {get_param: Debug}
-        neutron::host: '"%{::fqdn}"'
+        neutron::allow_overlapping_ips: true
+        neutron::rabbit_heartbeat_timeout_threshold: 60
+        neutron::host: '"%{::fqdn}"'    #NOTE: extra quoting is needed
+        neutron::keystone::auth::tenant: 'service'
