--- a/puppet/services/nova-api.yaml
+++ b/puppet/services/nova-api.yaml
@@ -42,5 +42,10 @@ outputs:
                   - 8774
                   - 13774
                   - 8775
+            nova::api::admin_tenant_name: 'service'
+            nova::api::enabled: true
+            nova::api::default_floating_pool: 'public'
+            nova::api::sync_db_api: true
+            nova::api::enable_proxy_headers_parsing: true
       step_config: |
         include tripleo::profile::base::nova::api
