--- a/puppet/services/nova-compute.yaml
+++ b/puppet/services/nova-compute.yaml
@@ -31,7 +31,7 @@ outputs:
         map_merge:
           - get_attr: [NovaBase, role_data, config_settings]
           - nova::compute::libvirt::manage_libvirt_services: false
-          # we manage migration in nova common puppet profile
+            # we manage migration in nova common puppet profile
             nova::compute::libvirt::migration_support: false
             tripleo::profile::base::nova::manage_migration: true
             tripleo::profile::base::nova::nova_compute_enabled: true
@@ -42,6 +42,14 @@ outputs:
               - '.'
               - - 'client'
                 - {get_param: CephClientUserName}
+            nova::compute::rbd::libvirt_rbd_secret_uuid: '"%{hiera(\"ceph::profile::params::fsid\")}"'
+            nova::compute::instance_usage_audit: true
+            nova::compute::instance_usage_audit_period: 'hour'
+            # Changing the default from 512MB. The current templates can not deploy
+            # overclouds with swap. On an idle compute node, we see ~1024MB of RAM
+            # used. 2048 is suggested to account for other possible operations for
+            # example openvswitch.
+            nova::compute::reserved_host_memory: 2048
       step_config: |
         # TODO(emilien): figure how to deal with libvirt profile.
         # We'll probably threat it like we do with Neutron plugins.
