--- a/puppet/services/nova-vncproxy.yaml
+++ b/puppet/services/nova-vncproxy.yaml
@@ -22,6 +22,8 @@ outputs:
     value:
       service_name: nova-vncproxy
       config_settings:
-        get_attr: [NovaBase, role_data, config_settings]
+        map_merge:
+          - get_attr: [NovaBase, role_data, config_settings]
+          - nova::vncproxy::enabled: true
       step_config: |
         include tripleo::profile::base::nova::vncproxy
