--- a/puppet/services/pacemaker/glance-api.yaml
+++ b/puppet/services/pacemaker/glance-api.yaml
@@ -53,6 +53,7 @@ outputs:
             glance_file_pcmk_fstype: {get_param: GlanceFilePcmkFstype}
             glance_file_pcmk_manage: {get_param: GlanceFilePcmkManage}
             glance_file_pcmk_options: {get_param: GlanceFilePcmkOptions}
+            glance_file_pcmk_directory: '/var/lib/glance/images'
             glance::api::manage_service: false
             glance::api::enabled: false
       step_config: |
