--- a/puppet/services/rabbitmq.yaml
+++ b/puppet/services/rabbitmq.yaml
@@ -42,5 +42,20 @@ outputs:
               - 4369
               - 5672
               - 35672
+        rabbitmq::delete_guest_user: false
+        rabbitmq::wipe_db_on_cookie_change: true
+        rabbitmq::port: '5672'
+        rabbitmq::package_source: undef
+        rabbitmq::repos_ensure: false
+        rabbitmq_environment:
+          RABBITMQ_NODENAME: "rabbit@%{::hostname}"
+          RABBITMQ_SERVER_ERL_ARGS: '"+K true +A30 +P 1048576 -kernel inet_default_connect_options [{nodelay,true},{raw,6,18,<<5000:64/native>>}] -kernel inet_default_listen_options [{raw,6,18,<<5000:64/native>>}]"'
+        rabbitmq_kernel_variables:
+          inet_dist_listen_min: '35672'
+          inet_dist_listen_max: '35672'
+        rabbitmq_config_variables:
+          tcp_listen_options: '[binary, {packet, raw}, {reuseaddr, true}, {backlog, 128}, {nodelay, true}, {exit_on_close, false}, {keepalive, true}]'
+          cluster_partition_handling: 'pause_minority'
+          loopback_users: '[]'
       step_config: |
         include ::tripleo::profile::base::rabbitmq
