--- a/puppet/services/sahara-base.yaml
+++ b/puppet/services/sahara-base.yaml
@@ -47,3 +47,5 @@ outputs:
           - spark
           - storm
         sahara::rpc_backend: rabbit
+        sahara::admin_tenant_name: 'service'
+        sahara::keystone::auth::tenant: 'service'
