--- a/puppet/services/sahara-engine.yaml
+++ b/puppet/services/sahara-engine.yaml
@@ -30,11 +30,11 @@ outputs:
           - sahara_dsn: &sahara_dsn
               list_join:
                 - ''
-                - - {get_param: [EndpointMap, MysqlVirtual, protocol]}
+                - - {get_param: [EndpointMap, MysqlInternal, protocol]}
                   - '://sahara:'
                   - {get_param: SaharaPassword}
                   - '@'
-                  - {get_param: [EndpointMap, MysqlVirtual, host]}
+                  - {get_param: [EndpointMap, MysqlInternal, host]}
                   - '/sahara'
             sahara::database_connection: *sahara_dsn
             sahara::db::mysql::password: {get_param: SaharaPassword}
