--- a/puppet/services/swift-storage.yaml
+++ b/puppet/services/swift-storage.yaml
@@ -48,5 +48,17 @@ outputs:
               - 6000
               - 6001
               - 6002
+        swift::storage::all::incoming_chmod: 'Du=rwx,g=rx,o=rx,Fu=rw,g=r,o=r'
+        swift::storage::all::outgoing_chmod: 'Du=rwx,g=rx,o=rx,Fu=rw,g=r,o=r'
+        swift::storage::all::object_pipeline:
+          - healthcheck
+          - recon
+          - object-server
+        swift::storage::all::container_pipeline:
+          - healthcheck
+          - container-server
+        swift::storage::all::account_pipeline:
+          - healthcheck
+          - account-server
       step_config: |
         include ::tripleo::profile::base::swift::storage
