--- a/puppet/services/database/redis-base.yaml
+++ b/puppet/services/database/redis-base.yaml
@@ -15,8 +15,11 @@ outputs:
     value:
       service_name: redis-base
       config_settings:
-       redis::requirepass: {get_param: RedisPassword}
-       redis::masterauth: {get_param: RedisPassword}
-       redis::sentinel_auth_pass: {get_param: RedisPassword}
-       tripleo::loadbalancer::redis_password: {get_param: RedisPassword}
-
+        redis::requirepass: {get_param: RedisPassword}
+        redis::masterauth: {get_param: RedisPassword}
+        redis::sentinel_auth_pass: {get_param: RedisPassword}
+        redis::port: 6379
+        redis::sentinel::master_name: '"%{hiera(\"bootstrap_nodeid\")}"'
+        redis::sentinel::redis_host: '"%{hiera(\"bootstrap_nodeid_ip\")}"'
+        redis::sentinel::notification_script: '/usr/local/bin/redis-notifications.sh'
+        tripleo::loadbalancer::redis_password: {get_param: RedisPassword}
