--- a/puppet/services/glance-registry.yaml
+++ b/puppet/services/glance-registry.yaml
@@ -38,6 +38,8 @@ outputs:
               - {get_param: [EndpointMap, MysqlInternal, host]}
               - '/glance'
         glance::registry::keystone_password: {get_param: GlancePassword}
+        glance::registry::keystone_tenant: 'service'
+        glance::registry::pipeline: 'keystone'
         glance::registry::auth_uri: {get_param: [EndpointMap, KeystoneInternal, uri] }
         glance::registry::identity_uri: { get_param: [EndpointMap, KeystoneAdmin, uri_no_suffix] }
         glance::registry::debug: {get_param: Debug}
