--- a/puppet/services/swift-proxy.yaml
+++ b/puppet/services/swift-proxy.yaml
@@ -41,6 +41,7 @@ outputs:
         swift::proxy::authtoken::auth_uri: {get_param: [EndpointMap, KeystoneInternal, uri]}
         swift::proxy::authtoken::identity_uri: {get_param: [EndpointMap, KeystoneAdmin, uri_no_suffix]}
         swift::proxy::authtoken::admin_password: {get_param: SwiftPassword}
+        swift::proxy::authtoken::admin_tenant_name: 'service'
         swift::proxy::node_timeout: {get_param: SwiftProxyNodeTimeout}
         swift::proxy::workers: {get_param: SwiftWorkers}
         swift::keystone::auth::public_url: {get_param: [EndpointMap, SwiftPublic, uri]}
@@ -56,5 +57,30 @@ outputs:
             dport:
               - 8080
               - 13808
+        swift::keystone::auth::tenant: 'service'
+        swift::keystone::auth::configure_s3_endpoint: false
+        swift::keystone::auth::operator_roles:
+          - admin
+          - swiftoperator
+          - ResellerAdmin
+        swift::proxy::keystone::operator_roles:
+          - admin
+          - swiftoperator
+          - ResellerAdmin
+        swift::proxy::pipeline:
+          - 'catch_errors'
+          - 'healthcheck'
+          - 'proxy-logging'
+          - 'cache'
+          - 'ratelimit'
+          - 'bulk'
+          - 'tempurl'
+          - 'formpost'
+          - 'authtoken'
+          - 'keystone'
+          - 'staticweb'
+          - 'proxy-logging'
+          - 'proxy-server'
+        swift::proxy::account_autocreate: true
       step_config: |
         include ::tripleo::profile::base::swift::proxy
